# gcpu-albertschool-heal-chatbot

./: .env.example  .gitignore  README.md  gen-lang-client-credentials.json  pyproject.toml
src/: app.py  image_app.py  location_app.py  main.py  telegram_worker.py
src/backend/: __init__.py  image_description.py  server.py  services.py
src/backend/utils/: __init__.py  format_output.py  get_doctors.py  get_facilities.py  global_variables.py  langfuse.py  logging.py  models.py  output_parsers.py  prompt_templates.py  prompt_templates_old.py
src/chatbot/: .env  __init__.py  app.py  app_fastapi.py  backend.py  format_output.py  image_description.py  requirements.txt  server.py  services.py
src/chatbot/utils/: __init__.py  format_output.py  langfuse.py  output_parsers.py  prompt_templates.py
src/gcpu_albert_hackathon/: __init__.py
src/streamlit/: app.py
src/telegram_worker/: app.py  config.py
src/telegram_worker/handlers/: message_handler.py
src/telegram_worker/services/: chat_service.py
src/web/: app.py
src/web/components/: chat.py  header.py  styles.py
src/web/utils/: image.py  state.py
tests/: test_triage.py
