[project]
name = "gcpu-albert-hackathon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mintyfrankie", email = "77310871+mintyfrankie@users.noreply.github.com" }
]
dependencies = [
    "gradio>=5.4.0",
    "streamlit>=1.40.0",
    "langchain-core>=0.3.15",
    "python-dotenv>=1.0.1",
    "langchain-google-genai>=2.0.4",
    "langchain>=0.3.7",
    "langfuse>=2.53.9",
    "langchain-google-vertexai>=2.0.7",
    "langgraph>=0.2.45",
    "pydantic>=2.9.2",
    "typing-extensions>=4.12.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ollama>=0.3.3",
    "pytest>=8.3.3",
    "langfuse>=2.53.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
